Add navigation links

--- a/web_apps/door-moisture-model.html
+++ b/web_apps/door-moisture-model.html
@@ -11,6 +11,7 @@ input[type=range]{width:100%;}
 </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <h1>Seventeenth‑Century Cumbrian Door Moisture Model</h1>
 <p>Adjust the estimated <em>effective moisture content</em> (EMC, %) of each element. The model converts EMC to linear swelling&nbsp;Δ<span style="font-size:smaller;">w</span>=k·(EMC−EMC<sub>eq</sub>) and evaluates the resulting gap between door edge and jamb rebate.</p>
 
