--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body{font-family:Arial, sans-serif;margin:20px;}
 </head>
 <body>
 <h1>Project Examples</h1>
+<p><a href="https://lawrencerowland.github.io/">Home</a></p>
 <div class="filter" id="filter"></div>
 <div id="examples"></div>
 <script>
