--- a/web_apps/hs2-decision-graph.html
+++ b/web_apps/hs2-decision-graph.html
@@ -259,7 +259,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXM2VXQH" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-<p><a href="../project-examples.html">Back to Project Examples</a></p>
+<p><a href="../index.html">Back to Card Index</a></p>
     <div id="loading">
         <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
         <p>Loading knowledge graph...</p>
