Add index link to all web apps

--- a/web_apps/3D_Construction_Workflow.html
+++ b/web_apps/3D_Construction_Workflow.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
   </head>
   <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <h1>Dynamic Construction Workflow: Interdependencies in Construction Projects</h1>
     <script>
       // Set up scene, camera, and renderer
