--- a/web_apps/Project_Decision_Framing_Tool.html
+++ b/web_apps/Project_Decision_Framing_Tool.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 
 <h1>Project Decision Framing Tool</h1>
 <p>This tool helps you structure a recurring project decision using Warren Powell's Sequential Decision Framework (State, Decision, Exogenous Information).</p>
