--- a/web_apps/hs2_WBS_to_PBS.html
+++ b/web_apps/hs2_WBS_to_PBS.html
@@ -211,6 +211,7 @@
     </style>
 </head>
 <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <div id="sidebar">
         <h2>HS2 Overview</h2>
         <ul id="phase-selector">
