--- a/web_apps/pm_gap_map.html
+++ b/web_apps/pm_gap_map.html
@@ -27,6 +27,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <header><h1>Project‑Management Gap Map</h1></header>
 <div id="controls"></div>
 <div id="list"></div>
