--- a/web_apps/what_AI_model_for_what.html
+++ b/web_apps/what_AI_model_for_what.html
@@ -9,6 +9,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="p-4">
+  <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
   <script type="text/babel" src="../jsx_apps/what_AI_model_for_what.jsx"></script>
   <script type="text/babel">
