--- a/web_apps/interactive-nec-contract-journey.html
+++ b/web_apps/interactive-nec-contract-journey.html
@@ -7,14 +7,14 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="render-app.js"></script>
 </head>
 <body class="p-4">
   <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
   <script type="text/babel" data-presets="typescript,react" src="../tsx_apps/interactive-nec-contract-journey.tsx"></script>
   <script type="text/babel">
-    const root = ReactDOM.createRoot(document.getElementById('root'));
-    root.render(<ContractJourney />);
+    renderApp('ContractJourney');
   </script>
 </body>
 </html>
