--- a/web_apps/p3m-capability-tool.html
+++ b/web_apps/p3m-capability-tool.html
@@ -8,14 +8,14 @@
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/lucide-react/dist/lucide-react.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="render-app.js"></script>
 </head>
 <body class="p-4">
   <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
   <script type="text/babel" data-presets="typescript,react" src="../tsx_apps/p3m-capability-tool.tsx"></script>
   <script type="text/babel">
-    const root = ReactDOM.createRoot(document.getElementById('root'));
-    root.render(<P3MCapabilityTool />);
+    renderApp('P3MCapabilityTool');
   </script>
 </body>
 </html>
