--- a/web_apps/project-controls-knowledge-graph.html
+++ b/web_apps/project-controls-knowledge-graph.html
@@ -8,14 +8,14 @@
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="render-app.js"></script>
 </head>
 <body class="p-4">
   <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
   <script type="text/babel" data-presets="typescript,react" src="../tsx_apps/project-controls-knowledge-graph.tsx"></script>
   <script type="text/babel">
-    renderApp('ProjectControlsKnowledgeGraph');
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(<ProjectControlsKnowledgeGraph />);
   </script>
 </body>
 </html>
