use local vendor paths

--- a/web_apps/project_use_case_tree.html
+++ b/web_apps/project_use_case_tree.html
@@ -151,7 +151,7 @@
   </details>
 </div>
 
-<script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+<script src="../vendor/tailwindcdn.js"></script>
 <script>
 // toggle all details
 document.addEventListener('DOMContentLoaded', () => {
