add build system and local assets

--- a/web_apps/decision-tree.html
+++ b/web_apps/decision-tree.html
@@ -5,7 +5,7 @@
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start":new Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:"";j.async=true;j.src="https://www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);})(window,document,"script","dataLayer","GTM-WXM2VXQH");</script>
     <!-- End Google Tag Manager -->
     <title>Project Management SaaS Decision Tree</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script> <!-- Include D3.js for visualization -->
+    <script src="../vendor/d3.min.js"></script>
     <style>
         .node {
             cursor: pointer;
