--- a/web_apps/3D_Construction_Workflow.html
+++ b/web_apps/3D_Construction_Workflow.html
@@ -8,9 +8,8 @@
       h1 { text-align: center; font-family: Arial, sans-serif; margin: 20px 0; }
       canvas { display: block; }
     </style>
-    <!-- Include Three.js and dat.GUI from CDNs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+    <script src="../vendor/three.min.js"></script>
+    <script src="../vendor/dat.gui.min.js"></script>
   </head>
   <body>
     <p><a href="../index.html">Back to Card Index</a></p>
