--- a/web_apps/hs2-decision-graph.html
+++ b/web_apps/hs2-decision-graph.html
@@ -464,7 +464,7 @@
         </div>
     </div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+    <script src="../vendor/d3.min.js"></script>
     <script>
         // Wait for complete DOM and resources to load
         window.addEventListener('load', function() {
