--- a/web_apps/interactive-nec-contract-journey.html
+++ b/web_apps/interactive-nec-contract-journey.html
@@ -6,13 +6,12 @@
   <link href="../vendor/tailwind.min.css" rel="stylesheet">
   <script crossorigin src="../vendor/react.development.js"></script>
   <script crossorigin src="../vendor/react-dom.development.js"></script>
-  <script src="../vendor/babel.min.js"></script>
 </head>
 <body class="p-4">
   <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
-  <script type="text/babel" data-presets="typescript,react" src="../tsx_apps/interactive-nec-contract-journey.tsx"></script>
-  <script type="text/babel">
+  <script src="dist/interactive-nec-contract-journey.js"></script>
+  <script>
     const root = ReactDOM.createRoot(document.getElementById('root'));
     root.render(<ContractJourney />);
   </script>
