--- a/web_apps/pm_gap_map.html
+++ b/web_apps/pm_gap_map.html
@@ -24,7 +24,7 @@
  svg{width:100%;height:100%}
  .label{font-size:.75rem;fill:#111;pointer-events:none}
 </style>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>
+<script src="../vendor/d3.min.js"></script>
 </head>
 <body>
 <p><a href="../index.html">Back to Card Index</a></p>
