--- a/web_apps/project-controls-knowledge-graph.html
+++ b/web_apps/project-controls-knowledge-graph.html
@@ -6,14 +6,13 @@
   <link href="../vendor/tailwind.min.css" rel="stylesheet">
   <script crossorigin src="../vendor/react.development.js"></script>
   <script crossorigin src="../vendor/react-dom.development.js"></script>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="../vendor/babel.min.js"></script>
+  <script src="../vendor/d3.min.js"></script>
 </head>
 <body class="p-4">
   <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
-  <script type="text/babel" data-presets="typescript,react" src="../tsx_apps/project-controls-knowledge-graph.tsx"></script>
-  <script type="text/babel">
+  <script src="dist/project-controls-knowledge-graph.js"></script>
+  <script>
     const root = ReactDOM.createRoot(document.getElementById('root'));
     root.render(<ProjectControlsKnowledgeGraph />);
   </script>
