--- a/web_apps/project-management-simulation.html
+++ b/web_apps/project-management-simulation.html
@@ -7,13 +7,12 @@
   <script src="../vendor/react.development.js"></script>
   <script src="../vendor/react-dom.development.js"></script>
   <script src="../vendor/Recharts.min.js"></script>
-  <script src="../vendor/babel.min.js"></script>
 </head>
 <body class="p-4">
   <p><a href="../index.html">Back to Card Index</a></p>
   <div id="root"></div>
-  <script type="text/babel" data-presets="typescript,react" src="../tsx_apps/project-management-simulation.tsx"></script>
-  <script type="text/babel">
+  <script src="dist/project-management-simulation.js"></script>
+  <script>
     document.addEventListener('DOMContentLoaded', () => {
       const root = ReactDOM.createRoot(document.getElementById('root'));
       root.render(<ProjectManagementSimulation />);
