--- a/web_apps/consulting_catalogue.html
+++ b/web_apps/consulting_catalogue.html
@@ -30,6 +30,7 @@
 </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <header>
     <h1>Project‑Director Consulting Catalogue</h1>
     <nav>
