--- a/web_apps/AI_timeline_from_Gemini_25.html
+++ b/web_apps/AI_timeline_from_Gemini_25.html
@@ -51,6 +51,7 @@
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
+    <p><a href="../index.html">Back to Card Index</a></p>
 
     <div class="container mx-auto p-4 md:p-8">
         <header class="text-center mb-8">
