Add back links to all web app pages

--- a/web_apps/WBS_rewrite.html
+++ b/web_apps/WBS_rewrite.html
@@ -95,6 +95,7 @@
 </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <header>
   <h1>WBS Graph Rewriter</h1>
   <div class="toolbar">
