--- a/web_apps/concurrent_change_levels_amazon.html
+++ b/web_apps/concurrent_change_levels_amazon.html
@@ -26,6 +26,7 @@ li{margin:.25rem 0;}
 </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <div id="app" class="min-h-64" data-timeout="3000">
   <noscript>Interactive visualisation</noscript>
   <div class="container">
