--- a/web_apps/decision-latency.html
+++ b/web_apps/decision-latency.html
@@ -116,6 +116,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
 <body>
+  <p><a href="../index.html">Back to Card Index</a></p>
   <h1>Concurrency & Decision Latency in a Knowledge Graph Creation Project</h1>
   <p class="description">
     This demo combines a Gantt‑style timeline and a decision latency chart to
