--- a/web_apps/eisenhower-matrix.html
+++ b/web_apps/eisenhower-matrix.html
@@ -170,6 +170,7 @@
   </style>
 </head>
 <body>
+  <p><a href="../index.html">Back to Card Index</a></p>
   <div class="container">
     <h1>Eisenhower Matrix Prioritizer</h1>
     <p>
