--- a/web_apps/hazard_morphospace.html
+++ b/web_apps/hazard_morphospace.html
@@ -96,6 +96,7 @@
   </style>
 </head>
 <body>
+  <p><a href="../index.html">Back to Card Index</a></p>
   <div class="main-container">
     <!-- Left pane: controls and chart -->
     <div class="left-pane">
