--- a/web_apps/intro_risk_matrix.html
+++ b/web_apps/intro_risk_matrix.html
@@ -67,6 +67,7 @@
     </style>
   </head>
   <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <h1>Building and Interpreting a Risk Matrix</h1>
     <p>This interactive tool demonstrates how to create and read a standard 5x5 risk matrix, commonly used in project management to map the likelihood of a risk event to its potential impact.</p>
 
