--- a/web_apps/project-management-pong.html
+++ b/web_apps/project-management-pong.html
@@ -92,6 +92,7 @@
     </style>
 </head>
 <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <h1>Project Management Pong</h1>
     <div class="info">
         <p>You are the <strong>Project Manager</strong> (bottom paddle). Control your paddle with the left and right arrow keys.</p>
