--- a/web_apps/service_trident.html
+++ b/web_apps/service_trident.html
@@ -33,6 +33,7 @@ hr { border:none; border-top:1px solid var(--line); margin:16px 0; }
 </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <header>
   <h1>Service Trident — Need → Lead → Leverage</h1>
   <p class="desc">Deterministic lead (f: A→B), plural leverage (R ⊆ A×C). Click a Need; its canonical Lead is highlighted. Choose where you will intervene.</p>
