--- a/web_apps/simplicial_project_mgmt.html
+++ b/web_apps/simplicial_project_mgmt.html
@@ -31,6 +31,7 @@
 </style>
 </head>
 <body>
+<p><a href="../index.html">Back to Card Index</a></p>
 <div class="wrapper">
   <header>
     <h1>When Three Things Pull Together (or Drift Apart)</h1>
