--- a/web_apps/stakeholder-mapper.html
+++ b/web_apps/stakeholder-mapper.html
@@ -187,6 +187,7 @@
     </style>
   </head>
   <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <header>
       <h1>Stakeholder Influence Mapper</h1>
       <p class="description">
