--- a/web_apps/weighted-decision-matrix.html
+++ b/web_apps/weighted-decision-matrix.html
@@ -91,6 +91,7 @@
   </style>
 </head>
 <body>
+  <p><a href="../index.html">Back to Card Index</a></p>
   <h1>Weighted Decision Matrix</h1>
   <div class="description">
     This interactive tool is crafted for <strong>cross‑functional project managers</strong> who must choose between competing proposals, vendors or feature sets.  It employs a weighted decision matrix to help you quantify subjective choices.  Simply add criteria with weights (importance), add your options, and rate each option against every criterion.  Scores update automatically and the best option is highlighted.
