--- a/web_apps/gap_map_gemini.html
+++ b/web_apps/gap_map_gemini.html
@@ -135,6 +135,7 @@
     </style>
   </head>
   <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <header>
       <h1>Project Management Gap-Map</h1>
       <div class="info-buttons">
