--- a/web_apps/project-services-navigator.html
+++ b/web_apps/project-services-navigator.html
@@ -318,6 +318,7 @@
     </style>
 </head>
 <body>
+    <p><a href="../index.html">Back to Card Index</a></p>
     <div class="container">
         <header>
             <h1>UK Project Services Market Navigator</h1>
