--- a/web_apps/project_use_case_tree.html
+++ b/web_apps/project_use_case_tree.html
@@ -1,3 +1,4 @@
+<p><a href="../index.html">Back to Card Index</a></p>
 <div id="controls" class="mb-2 flex justify-end">
   <button id="toggleAll" data-state="closed" class="px-3 py-1 rounded bg-blue-600 text-white shadow hover:bg-blue-700 focus:outline-none focus:ring">Expand all</button>
 </div>
