Add back link to SMR governance simulator

--- a/web_apps/SMR_governance_simulator.html
+++ b/web_apps/SMR_governance_simulator.html
@@ -86,6 +86,7 @@
       <span class="badge">First power: 2030s</span>
     </div>
     <div class="toolbar">
+      <a class="btn" href="../index.html">Back to Card Index</a>
       <button class="iconbtn" id="quickGuideBtn" title="Quick Guide (?)">?</button>
       <button class="btn primary" id="oneClickBtn" title="Choose a recommended action and advance (A)">▶ One‑click Turn</button>
       <button class="btn" id="endTurn">Next Quarter (Space)</button>
