--- a/web_apps/project_time_exchange.html
+++ b/web_apps/project_time_exchange.html
@@ -15,6 +15,8 @@
     header .title h1{font-size:20px;margin:0}
     header .title .tag{font-size:12px;color:#8ea0c8;border:1px solid #2b315a;border-radius:999px;padding:2px 8px}
     header .actions{display:flex;gap:8px;flex-wrap:wrap}
+    header .actions a{display:inline-block;background:#232951;color:#e9eef6;border:1px solid #2b315a;border-radius:8px;padding:7px 10px;text-decoration:none;font-weight:600}
+    header .actions a:hover{border-color:#a7e0a0;color:#a7e0a0}
     .panel{background:#151939;border-radius:12px;box-shadow:0 8px 20px rgba(0,0,0,0.36);padding:12px}
     .left{grid-row:2/-1;display:grid;grid-template-rows:auto auto 1fr;gap:12px}
     .controls,.editor,.explainer{display:grid;gap:10px}
@@ -66,6 +68,7 @@
       <div class="tag">v4 · CPM · Crash Menus · Pareto Knee · VCG · Explainers</div>
     </div>
     <div class="actions">
+      <a href="project_time_exchange_explainer.html">PTS Explainer Page</a>
       <button id="btnAuto" class="primary">Run All (Explain)</button>
       <button id="btnReset">Reset</button>
       <button id="btnExport">Export CSV</button>
